add swagger, fix routes
